comments and bugging